[tool.poetry]
name = "dababy-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
PyNaCl = "^1.5.0"
pafy = "^0.5.5"
youtube_dl = "^2021.12.17"
ffmpeg = "^1.4"
gTTS = "^2.3.1"
discord = "2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
